--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "superagent": "^8.1.2"
+    "superagent": "^8.1.2",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
