--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "rewrites": [
-    { "source": "/api/:path*", "destination": "https://my-portfolio-server-eosin.vercel.app/api/:path*" }
+    { "source": "/:path*", "destination": "https://my-portfolio-server-eosin.vercel.app/:path*" },
   ]
 }
