--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL = https://my-portfolio-server-eosin.vercel.app
+VITE_API_URL_PHOTO = https://my-portfolio-server-eosin.vercel.app/api/v1/photo
+VITE_API_URL_DATA = https://my-portfolio-server-eosin.vercel.app/api/v1/data
